--- a/cadastro.html
+++ b/cadastro.html
@@ -20,27 +20,27 @@
             <form method="post" action="?go=cadastrar">
                 <div class="col-1">
                     <label for="matricula">Matricula:</label>
-                    <input type="text" name="matricula" id="matricula" class="txt" maxlength="10" required>
+                    <input type="text" name="matricula" id="matricula" class="txt" maxlength="10" required placeholder="Digite a matricula">
                 </div>
                 <div class="col-1">
                     <label for="nome">Nome:</label>
-                    <input type="text" name="nome" id="nome" class="txt" maxlength="60">
+                    <input type="text" name="nome" id="nome" class="txt" maxlength="60" placeholder="Digite o nome">
                 </div>
                 <div class="col-1">
                     <label for="lotacao">Lotação:</label>
-                    <input type="text" name="lotacao" id="lotacao" class="txt" maxlength="70">    
+                    <input type="text" name="lotacao" id="lotacao" class="txt" maxlength="70" placeholder="Digite a lotação">    
                 </div>
                 <div class="col-1">
                     <label for="cargo">Cargo:</label>
-                    <input type="text" name="cargo" id="cargo" class="text" maxlength="70">
+                    <input type="text" name="cargo" id="cargo" class="text" maxlength="70" placeholder="Digite o cargo">
                 </div>
                 <div class="col-1">
                     <label for="funcao">Função:</label>
-                    <input type="text" name="funcao" id=funcao class="txt" maxlength="60">
+                    <input type="text" name="funcao" id=funcao class="txt" maxlength="60" placeholder="Digite a função">
                 </div>
                 <div class="col-1">
                     <label for="caghora ">Carga Hr:</label>
-                    <input type="text" name="caghora" id="caghora" class="txt" maxlength="2" value="40">
+                    <input type="text" name="caghora" id="caghora" class="txt" maxlength="2" placeholder="Digite a carga horária">
                 </div>
                 <div class="btn-box">
                     <input type="submit" value="Cadastrar" class="botao" id=btnCad>
