New changes on GERAR.JS and Index2.php
A lot of things changed. Still being developed...

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,13 +6,13 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/cadastro.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"> <!--Fonte google-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"> <!--Fonte google-->
     
 </head>
 <body>
     <header> <!--Tag header para manter semantica padrao W3C-->
         <div class="div-top"> <!--Div da imagem de topo-->
-             <img class="img-top" src="imagem/casaRB.jpg"> <!--Imagem de topo-->
+             <img class="img-top" src="imagem/casaRB.jpg" width="350px"> <!--Imagem de topo-->
         </div>
     </header>
     <main>
@@ -36,11 +36,11 @@
                 </div>
                 <div class="col-1">
                     <label for="funcao">Função:</label>
-                    <input type="text" name="funcao" id=funcao class="txt" maxlength="60" placeholder="Digite a função">
+                    <input type="text" name="funcao" id=funcao class="txt" maxlength="60" value="n/a"  placeholder="Digite a função">
                 </div>
                 <div class="col-1">
                     <label for="caghora ">Carga Hr:</label>
-                    <input type="text" name="caghora" id="caghora" class="txt" maxlength="2" placeholder="Digite a carga horária">
+                    <input type="text" name="caghora" id="caghora" class="txt" maxlength="2" value="40" placeholder="Digite a carga horária">
                 </div>
                 <div class="btn-box">
                     <input type="submit" value="Cadastrar" class="botao" id=btnCad>
